@@ -27,9 +27,14 @@ class Productdetail(models.Model):
     is_seckill   = models.BooleanField(default=False, verbose_name=u'是否秒杀')
     buy_limit    = models.BooleanField(default=False,verbose_name=u'是否限购')
     per_limit    = models.IntegerField(default=5,verbose_name=u'限购数量')
-    mama_rebeta  = models.IntegerField(default=OUT_PERCENT, choices=REBETA_CHOICES, 
-					db_index=True, verbose_name=u'代理返利')
-    
+
+    material = models.CharField(max_length=64, blank=True, verbose_name=u'商品材质')
+    color = models.CharField(max_length=64, blank=True, verbose_name=u'可选颜色')
+    wash_instructions = models.TextField(blank=True, verbose_name=u'洗涤说明')
+    note = models.CharField(max_length=64, blank=True, verbose_name=u'备注')
+    mama_rebeta = models.IntegerField(default=OUT_PERCENT, choices=REBETA_CHOICES,
+                                      db_index=True, verbose_name=u'代理返利')
+
     class Meta:
         db_table = 'flashsale_productdetail'
         verbose_name=u'特卖商品/详情'
